--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dbpouch",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Fastest and easiest database in cloud, based on PouchDb & node-pouch. Work with multiple cloud databases like a PRO.",
   "main": "main.js",
   "scripts": {
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "node-sanitize-options": "^0.0.6",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "cdnfly": "^0.0.7",
+    "node-promise-wrapper": "^0.0.2",
+    "randomstring": "^1.1.5"
   },
   "engines": {
     "node": "8.x"
